cuts v1.4.20 with dark mode fixes

--- a/src/extra/normalize.css
+++ b/src/extra/normalize.css
@@ -1,3 +1,18 @@
 @import "theme.css";
 @import "brand.css";
 @import "normalize.src.css";
+
+@media (--OSdark) {
+  :where(textarea, select, input:not(button,button[type],input[type="button"],input[type="submit"],input[type="reset"])) {
+    background-color: hsl(210 11% 10%);
+  }
+
+  :where(dialog) {
+    background-color: var(--surface-2);
+  }
+
+  :where(html) {
+    --shadow-strength: 10%;
+    --shadow-color: 220 40% 2%;
+  }
+}
